@@ -23,6 +23,8 @@ Version 5.0.7
   Bug #25947 CreateFormat/CreateParameters Column of DataTypes collection incorrect for CHAR 
   Bug #27765 Logging does not work
   Bug #27679 MySqlCommandBuilder.DeriveParameters ignores UNSIGNED flag
+  Bug #27668 FillSchema and Stored Proc with an out parameter
+  Bug #28167 Poor performance building connection string (thanks Maxim!)
    
   Other changes
   -------------
